removed map-data from battle-start-params parse and send json instead of string for field